/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 */

// https://start.spring.io/#!type=gradle-project&language=java&platformVersion=2.5.6&packaging=jar&jvmVersion=11&groupId=fr.dademo&artifactId=bi.companies&name=bi.companies&description=BI%20analysis%20using%20french%20government%20Open%20Data&packageName=fr.dademo.bi.companies&dependencies=lombok,configuration-processor,jdbc,data-jdbc,flyway,mariadb,postgresql,data-mongodb,data-couchbase,amqp,kafka,batch,validation,testcontainers,influx
plugins {
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${springDependencyManagement}"
    id 'java'
}

group 'fr.dademo.bi'
version '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

bootRun {
    jvmArgs = [
        '-XX:+UseG1GC',
    ]
}

dependencies {

    implementation project(':modules:dependencies:autoconfigure') {
//        capabilities {
//            requireCapability("toolsSupport")
//        }
    }
    implementation project(':modules:dependencies:reader:http')
    implementation project(':modules:dependencies:lock')
    implementation project(':modules:dependencies:cache:cache_commons')
    implementation project(':modules:dependencies:cache:cache_validators')
    implementation project(':modules:dependencies:cache:cache_backends')
    implementation project(':modules:dependencies:reader:http_cache')
    implementation project(':modules:dependencies:data:helpers:data_gouv_fr')
    implementation project(':modules:dependencies:batch:batch_support')
    implementation project(':modules:dependencies:batch:batch_resources_reader_wrapper')

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springframework.boot:spring-boot-starter-amqp'
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-couchbase'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.amqp:spring-amqp'
    implementation 'org.springframework.kafka:spring-kafka'

    runtimeOnly 'io.micrometer:micrometer-registry-influx'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    runtimeOnly "org.xerial:sqlite-jdbc:${sqliteJdbcVersion}"
    runtimeOnly "org.postgresql:postgresql:${postgresqlVersion}"

    // Other libraries
    implementation "org.jooq:jooq:${jooqVersion}"
    implementation "org.apache.commons:commons-lang3:${apacheCommonsLang3Version}"
    implementation "org.apache.commons:commons-compress:${apacheCommonsCompressVersion}"
    implementation "commons-io:commons-io:${apacheCommonsIOVersion}"
    implementation "com.google.code.findbugs:jsr305:${findBugsJsr305Version}"
    // Csv readers
    implementation "org.apache.commons:commons-csv:${apacheCommonsCsvVersion}"
    implementation "de.siegmar:fastcsv:${fastCsvVersion}"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.amqp:spring-rabbit-test'
    testImplementation 'org.springframework.batch:spring-batch-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'org.testcontainers:couchbase'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:kafka'
    testImplementation 'org.testcontainers:mariadb'
    testImplementation 'org.testcontainers:mongodb'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:rabbitmq'
}

dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
    }
}

